# DeAuto

./: CMakeLists.txt  DeAuto.pri  DeAuto.pro  LICENSE  assume.cpp  assume.h  file_edit.cpp  file_edit.h  main.cc  main.cpp  test.cpp  utility.cpp  utility.h  vardeclvisitor.cpp  vardeclvisitor.h
actions/: frontendaction.cc  frontendaction.h
consumer/: consumer.cc  consumer.h
finder/: finder.cc  finder.h  functioncallfinder.cc  functioncallfinder.h
utils/: utils.h
