project(DeAuto)
cmake_minimum_required(VERSION 2.8)
include_directories(/usr/lib/llvm-3.8/include)
aux_source_directory(. SRC_LIST)
find_package(LLVM REQUIRED CONFIG)
message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
include_directories(${LLVM_INCLUDE_DIRS})
add_definitions(${LLVM_DEFINITIONS})
llvm_map_components_to_libnames(llvm_libs support core)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} ${llvm_libs})
message(${LLVM_DIR})
target_compile_features(${PROJECT_NAME} PRIVATE cxx_binary_literals)
